[package]
name = "impliar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools="0.10.3"
substring="1.4.5"
factorial = "0.2.1"
asciis = "0.1.3"
ndarray = "0.15.4"
modulo = "0.1.2"
round = "0.1.0"
